--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,5 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
+body {
+  font-family: $main-text-font;
+  color: $main-text-color;
+}
