--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,10 @@
 /* здесь используйте глобальные переменные */
+$headings-font: "Oswald", sans-serif;
+$main-text-font: "Lato", sans-serif;
+$headings-color: #000000;
+$main-text-color: #000000;
+
+// colors
+$basic-green: #68b738;
+$basic-gray: #f2f2f2;
+$special-gray: #ebebeb;
