--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,5 +1,7 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
 body {
-  font-family: $main-text-font;
-  color: $main-text-color;
+  font-family: $usual-text-font;
+	font-size: 14px;
+	line-height: 18px;
+  color: $usual-text-color;
 }
