--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,8 +1,8 @@
 /* GLOBAL */
 @import "./common/variables.scss";
 @import "./common/mixins.scss";
-@import "./common/global.scss";
 @import "./common/fonts.scss";
+@import "./common/global.scss";
 
 /* BLOCKS */
 @import "./blocks/additional-good.scss";
@@ -25,6 +25,7 @@
 @import "./blocks/page.scss";
 @import "./blocks/product-card.scss";
 @import "./blocks/results.scss";
+@import "./blocks/section-heading.scss";
 @import "./blocks/social-links.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/subscription-form.scss";
