--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,8 +1,8 @@
 .button {
-	font-size: 16px;
-	line-height: 20px;
-	color: #FFFFFF;
-	text-transform: uppercase;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-transform: uppercase;
 
-	background-color: $basic-green;
+  background-color: $basic-green;
 }
