--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,5 +1,6 @@
 .button {
   font-size: 16px;
+  font-family: $important-text-font;
   line-height: 20px;
   color: #ffffff;
   text-transform: uppercase;
