--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,3 +1,6 @@
-.header {
-
+.catalog__title {
+  font-size: 36px;
+  font-family: $important-text-font;
+  line-height: 40px;
+  color: $important-text-color;
 }
