--- a/source/styles/blocks/company-location.scss
+++ b/source/styles/blocks/company-location.scss
@@ -1,9 +1,8 @@
-.company-location {}
-
 .company-location__title {
   font-size: 16px;
   font-family: $important-text-font;
   line-height: 20px;
+  font-weight: 400;
   text-transform: uppercase;
   color: #111111;
 }
