--- a/source/styles/blocks/section-heading.scss
+++ b/source/styles/blocks/section-heading.scss
@@ -1,6 +1,12 @@
 .section-heading {
-	font-size: 36px;
-	font-family: $important-text-font;
-	line-height: 40px;
-	color: $important-text-color;
+  font-size: 36px;
+  font-family: $important-text-font;
+  line-height: 40px;
+  color: $important-text-color;
+}
+
+.section-heading--smaller {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
 }
