--- a/source/styles/blocks/show-more-card.scss
+++ b/source/styles/blocks/show-more-card.scss
@@ -1,16 +1,19 @@
-.food-type__title {
+.show-more-card__wrapper {
+  color: $usual-text-color;
+  text-decoration: none;
+}
+
+.show-more-card__title {
   font-family: $important-text-font;
-  font-size: 24px;
-  line-height: 37px;
   color: $important-text-color;
   text-transform: uppercase;
 }
 
-.food-type__link {
+.show-more-card__more-link {
   font-family: $important-text-font;
   font-size: 16px;
-  line-height: 16px;
-  color: #000000;
+  line-height: 20px;
+  color: $usual-text-color;
   text-transform: uppercase;
   text-decoration: none;
 }
