--- a/source/styles/blocks/subscription-form.scss
+++ b/source/styles/blocks/subscription-form.scss
@@ -1,3 +1,7 @@
-.header {
-
+.subscription-form__email-input {
+  font-family: $important-text-font;
+  font-size: 20px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: $usual-text-color;
 }
