--- a/source/styles/blocks/subscription.scss
+++ b/source/styles/blocks/subscription.scss
@@ -1,3 +1,6 @@
-.header {
-
+.subscription__description {
+  font-family: $important-text-font;
+  font-size: 16px;
+  line-height: 24px;
+  color: $important-text-color;
 }
