--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -26,6 +26,7 @@
 @import "./blocks/product-card.scss";
 @import "./blocks/results.scss";
 @import "./blocks/section-heading.scss";
+@import "./blocks/show-more-card.scss";
 @import "./blocks/social-links.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/subscription-form.scss";
