--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,10 @@
 /* здесь используйте глобальные переменные */
+$basic-green: #68b738;
+$basic-grey: #f2f2f2;
+$special-grey: #ebebeb;
+$special-dark-grey: #444444;
+
+$important-text-font: "Oswald", sans-serif;
+$usual-text-font: "Lato", sans-serif;
+$important-text-color: #000000;
+$usual-text-color: $special-dark-grey;
