--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,33 @@
 /* GLOBAL */
 @import "./common/variables.scss";
-@import "./common/global.scss";
+@import "./common/mixins.scss";
 @import "./common/fonts.scss";
+@import "./common/global.scss";
 
 /* BLOCKS */
-@import "./blocks/header.scss";
+@import "./blocks/additional-good.scss";
+@import "./blocks/additional-goods.scss";
+@import "./blocks/button.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/company-address.scss";
+@import "./blocks/company-location.scss";
+@import "./blocks/comparison-slider.scss";
+@import "./blocks/example.scss";
+@import "./blocks/features.scss";
+@import "./blocks/food-type.scss";
+@import "./blocks/food-types.scss";
+@import "./blocks/header-hero-wrapper.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-part.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/page.scss";
+@import "./blocks/product-card.scss";
+@import "./blocks/results.scss";
+@import "./blocks/section-heading.scss";
+@import "./blocks/show-more-card.scss";
+@import "./blocks/social-links.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/subscription-form.scss";
+@import "./blocks/visually-hidden.scss";
